# economic_news_analyzer

./: README.md  pyproject.toml
economic_news_analyzer/: analise_ia_noticias_20250528_172306.txt  main.py
