[project]
name = "economic-news-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "leandrosouzaf30",email = "leandrosouzaf30@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
